Revert to Arrays.asList