@@ -22,6 +22,7 @@ import java.io.UncheckedIOException;
 import java.net.URI;
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
@@ -90,7 +91,7 @@ public interface HttpClient extends Closeable {
 
         /** Sets the parameter key/values for the request. Number of arguments must be even. Null values are omitted. */
         default RequestBuilder parameters(String... pairs) {
-            return parameters(List.of(pairs));
+            return parameters(Arrays.asList(pairs));
         }
 
         /** Sets the parameter key/values for the request. Number of arguments must be even. Pairs with {@code null} values are omitted. */
